@@ -94,7 +94,15 @@ LINK32=link.exe
 # PROP Default_Filter "cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 # Begin Source File
 
+SOURCE=..\..\catalog.c
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\debugXML.c
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\DOCBparser.c
 # End Source File
 # Begin Source File
 
@@ -188,6 +196,10 @@ SOURCE=..\..\tree.c
 # End Source File
 # Begin Source File
 
+SOURCE=..\..\trio.c
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\uri.c
 # End Source File
 # Begin Source File
@@ -224,7 +236,15 @@ SOURCE=..\..\xpointer.c
 # PROP Default_Filter "h;hpp;hxx;hm;inl"
 # Begin Source File
 
+SOURCE=..\..\include\libxml\catalog.h
+# End Source File
+# Begin Source File
+
 SOURCE=..\..\include\libxml\debugXML.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\include\libxml\DOCBparser.h
 # End Source File
 # Begin Source File
 
@@ -245,6 +265,10 @@ SOURCE=..\..\include\libxml\HTMLparser.h
 # Begin Source File
 
 SOURCE=..\..\include\libxml\HTMLtree.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\libxml.h
 # End Source File
 # Begin Source File
 
@@ -277,6 +301,10 @@ SOURCE=..\..\strio.h
 # Begin Source File
 
 SOURCE=..\..\include\libxml\tree.h
+# End Source File
+# Begin Source File
+
+SOURCE=..\..\trio.h
 # End Source File
 # Begin Source File
 
